// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fetch pending users if moderates channel 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": Array [
        Object {
          "coverPhoto": "https://spectrum-imgp.imgix.net/https%3A%2F%2Fpbs.twimg.com%2Fprofile_banners%2F17106008%2F1491444958%2F1500x500?w=640&h=192&ixlib=js-1.2.0&s=f53ee6bc1b9d22607734b9e71f3927e2",
          "description": "I am blocked in the Spectrum community",
          "firstName": null,
          "id": "4",
          "isOnline": null,
          "name": "Blocked user",
          "profilePhoto": "https://spectrum-imgp.imgix.net/https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F848823167699230721%2F-9CbPtto_bigger.jpg?w=128&h=128&ixlib=js-1.2.0&s=b0b585cf84b9d6c86f7e4000b5464003",
          "timezone": null,
          "username": "blocked-user",
          "website": "",
        },
      ],
      "id": "2",
    },
  },
}
`;

exports[`should fetch pending users if moderates community 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": Array [
        Object {
          "coverPhoto": "https://spectrum-imgp.imgix.net/https%3A%2F%2Fpbs.twimg.com%2Fprofile_banners%2F17106008%2F1491444958%2F1500x500?w=640&h=192&ixlib=js-1.2.0&s=f53ee6bc1b9d22607734b9e71f3927e2",
          "description": "I am blocked in the Spectrum community",
          "firstName": null,
          "id": "4",
          "isOnline": null,
          "name": "Blocked user",
          "profilePhoto": "https://spectrum-imgp.imgix.net/https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F848823167699230721%2F-9CbPtto_bigger.jpg?w=128&h=128&ixlib=js-1.2.0&s=b0b585cf84b9d6c86f7e4000b5464003",
          "timezone": null,
          "username": "blocked-user",
          "website": "",
        },
      ],
      "id": "2",
    },
  },
}
`;

exports[`should fetch pending users if owns community 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": Array [
        Object {
          "coverPhoto": "https://spectrum-imgp.imgix.net/https%3A%2F%2Fpbs.twimg.com%2Fprofile_banners%2F17106008%2F1491444958%2F1500x500?w=640&h=192&ixlib=js-1.2.0&s=f53ee6bc1b9d22607734b9e71f3927e2",
          "description": "I am blocked in the Spectrum community",
          "firstName": null,
          "id": "4",
          "isOnline": null,
          "name": "Blocked user",
          "profilePhoto": "https://spectrum-imgp.imgix.net/https%3A%2F%2Fpbs.twimg.com%2Fprofile_images%2F848823167699230721%2F-9CbPtto_bigger.jpg?w=128&h=128&ixlib=js-1.2.0&s=b0b585cf84b9d6c86f7e4000b5464003",
          "timezone": null,
          "username": "blocked-user",
          "website": "",
        },
      ],
      "id": "2",
    },
  },
}
`;

exports[`should not fetch pending users if no permissions 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "2",
    },
  },
  "errors": Array [
    [GraphQLError: You don’t have permission to manage this channel],
  ],
}
`;

exports[`should not fetch pending users if not authed 1`] = `
Object {
  "data": Object {
    "channel": Object {
      "blockedUsers": null,
      "id": "2",
    },
  },
  "errors": Array [
    [GraphQLError: You must be signed in to do this],
  ],
}
`;
